Fixed bugs and also removed useless features